# NILMFormer

./: .gitignore  LICENSE  README.md  RunAblationExpes.py  RunNILMExpes.py  RunTSERExpes.py  hello.py  pyproject.toml  show_result.py
AblationExpes/: LaunchExpes.sh  REFITExperiments.py  UKDALEExperiments.py
Data/REFIT/: README.MD
Data/UKDALE/: README.MD
Helpers/: torch_dataset.py  utils.py
Models/NILMFormers/: NILMFormer.py  NILMFormerAbEmbed.py  NILMFormerAbEmbedPatch.py  NILMFormerAbPE.py  NILMFormerAbPEAdd.py  NILMFormerAbSt.py
Models/NILMFormers/Layers/: AttentionMask.py  ConvLayer.py  Transformer.py  UtilsLayer.py
Models/Sota/NILM/: BiLSTM.py  DResNets.py  DiffNILM.py  STNILM.py  UNET_NILM.py
Models/Sota/TSER/: InceptionTime.py
REFITExpes/: LaunchExpes.sh  REFITExperiments.py  REFITExperiments_TSER.py
UKDALEExpes/: LaunchExpes.sh  UKDALEExperiments.py  UKDALEExperiments_TSER.py
configs/: datasets.yaml  expes.yaml  models.yaml
data/REFIT/RAW_DATA_CLEAN/: HOUSE_Labels
data/UKDALE/: README.MD
expes/: launch_one_expe.py  run_all_expes.sh
expes/configs/: datasets_config.yaml
result/: 已训练的保存到了.md
results/: AllResults.csv  DetailedResults.md  README.md
scripts/: run_all_expe.sh  run_one_expe.py
src/baselines/nilm/: bert4nilm.py  bigru.py  bilstm.py  cnn1d.py  diffnilm.py  dresnets.py  energformer.py  fcn.py  stnilm.py  tsilnet.py  unetnilm.py
src/baselines/tser/: convnet.py  inceptiontime.py  (+1 more)
src/helpers/: dataset.py  expes.py  expes_helpers.py  metrics.py  preprocessing.py  trainer.py  utils.py
src/nilmformer/: congif.py  model.py
(+4 files in other folders)
